--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -464,7 +464,7 @@
 "grin.txbyfile.initStatus.receiver" = "Awaiting Receiving";
 "grin.txbyfile.receivedStatus.receiver" = "Received";
 "grin.txbyfile.receivedStatus.sender" = "Awaiting Finalization";
-
 "grin.creat.syncronizing" = "Creat and sync, 3 mins estimated";
 "grin.recover.syncronizing" = "Recover and sync, 3 mins estimated";
+"grin.creating" = "Grin wallet initializing, please wait a moment.";
 
