some paper work & add fmdb

--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -392,7 +392,7 @@
 "grin.balance.locked" = "Locked by Previous Transaction";
 "grin.wallet.check" = "Check";
 "grin.wallet.check.desc" = "Wallet check will scan the chain and cancel all pending transactions, unlock any locked outputs, restore any missing outputs, and ensure your wallet's content is consistent with the chain's version.";
-"grin.txType.sent" = "Sent";
+"grin.txType.sent" = "Created";
 "grin.txType.waitToSign" = "Unreceived";
 "grin.txType.received" = "Received";
 "grin.txType.waitToFinalize" = "Unfinalized";
@@ -403,11 +403,10 @@
 "grin.tx.Cancele" = "Canceled";
 "grin.tx.Repost" = "Repost";
 "grin.tx.copyId" = "Copy";
-"grin.useFirstViteAddress" = "To transfer GRIN through VITE address or Http address, please switch to the first VITE address.";
 "grin.tx.useVite" = "Use VITE Address";
-"grin.sent.useVite.desc" = "Transfer GRIN through VITE address is sharing transaction file encrypted by Vite through VITE address, which ensures only the real recipient can decrypt the file. Please note that only the first VITE address can be used to transfer or receive GRIN.";
-"grin.sent.useHttp" = "Use Http Address";
-"grin.sent.useHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you when you choose to transfer or receive GRIN through Http address. There are transaction fees in both the two steps above, the first one is paid by the sender and the second one is paid by the recipient. And please note that the transaction history in a sender's wallet only includes the transactions between the sender and Vite; And that of a recipient only includes the transactions between Vite and the recipient. For instance, a \"Confirmed\" state of the transaction in a sender's wallet only indicates the transaction from the sender to Vite is confirmed, doesn't mean the recipient has received GRIN.\nThe transfer amount should be no less than 0.1 GRIN.";
+"grin.sent.useVite.desc" = "Transfer GRIN through VITE address is sharing transaction file encrypted by Vite through VITE address, which ensures only the real recipient can decrypt the file.";
+"grin.sent.useHttp" = "Use HTTP Address";
+"grin.sent.useHttp.desc" = "您可以给任何支持GRIN HTTP地址转账的钱包转账，如果您给Vite钱包用户转账GRIN，我们不建议使用Http地址。";
 "grin.sent.useFile" = "Use Transaction File";
 "grin.know" = "I know";
 "grin.notSeeAgain" = "Don't show me again";
@@ -429,29 +428,29 @@
 "grin.sent.suggest.useVite.title" = "Notice";
 "grin.sent.suggest.useVite.desc" = "If you want to send GRIN to a Vite Wallet user, sending through VITE address is recommended for it is safer and cheaper.";
 "grin.sent.switch" = "VITE Address";
-"grin.sent.stillUseHttp" = "Http Address";
+"grin.sent.stillUseHttp" = "HTTP Address";
 "grin.sent.http.success" = "You have successfully sent GRIN transfer request";
-"grin.sent.vite.success" = "Your transaction has sent, please be aware that you can go through your GRIN transaction only if you use current address.";
+"grin.sent.vite.success" = "Your transaction has sent.";
 "grin.receiveByVite.addressCopyed" = "Your VITE address for receiving GRIN has been copied to the clipboard.";
-"grin.receiveByVite.desc" = "Please share your first VITE address(Find it at the bottom) with the sender, please note that only when the recipient using his first VITE address can he receive GRIN.";
+"grin.receiveByVite.desc" = "Please share your VITE address(Find it at the bottom) with the sender.";
 "grin.iknow" = "I know";
 "grin.thisIsFirstViteAddress" = "This is your first VITE address";
-"grin.receiveByHttp.addressCopyed" = "Your Http address for receiving GRIN has been copied to the clipboard";
-"grin.receiveByHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you when you choose to transfer or receive GRIN through Http address. There are transaction fees in both the two steps above, the first one is paid by the sender and the second one is paid by the recipient. Please note that the transaction history in a sender's wallet only includes the transactions between the sender and Vite; And that of a recipient only includes the transactions between Vite and the recipient. And only when you use your first VITE address can you receive GRIN.";
+"grin.receiveByHttp.addressCopyed" = "Your HTTP address for receiving GRIN has been copied to the clipboard";
+"grin.receiveByHttp.desc" = "As shown in the picture above, Vite will do the collection and remit for you when you choose to transfer or receive GRIN through HTTP address. There are transaction fees in both the two steps above.";
 "grin.receive.title" = "GRIN Transfer";
-"grin.receive.sented" = "Sent";
+"grin.receive.sented" = "Created";
 "grin.creatTime" = "Creation Time";
 "grin.signAndShare" = "Receive and Share";
 "grin.sent.btnTitle" = "Transfer";
 "grin.receive.BtnTitle" = "Receive";
 "grin.notice.title" = "Notice";
 "grin.teach.vite.receive.title" = "Receive GRIN through VITE Address";
-"grin.teach.http.receive.title" = "Receive GRIN though Http Address";
+"grin.teach.http.receive.title" = "Receive GRIN though HTTP Address";
 "grin.teach.vite.sent.title" = "Transfer GRIN through VITE Address";
-"grin.teach.http.sent.title" = "Transfer GRIN though Http Address";
+"grin.teach.http.sent.title" = "Transfer GRIN though HTTP Address";
 "grin.txid.title" = "Transaction ID";
 "grin.switchAddress" = "Switch Address";
-"grin.http.address" = "Http Address";
+"grin.http.address" = "HTTP Address";
 "grin.vite.address" = "VITE Address";
 "grin.sendPageViteContactsButtonTitle" = "GRIN Contact Address";
 "grin.canceled" = "Canceled";
@@ -467,4 +466,5 @@
 "grin.creat.syncronizing" = "Creat and sync, 3 mins estimated";
 "grin.recover.syncronizing" = "Recover and sync, 3 mins estimated";
 "grin.creating" = "Grin wallet initializing, please wait a moment.";
-
+"grin.pay.title.creat" = "创建交易";
+"grin.pay.title.finalize" = "敲定交易";
