--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -476,4 +476,6 @@
 "grin.teach.http.receive.copyHttpAddress" = "复制HTTP地址";
 "grin.teach.vite.receive.copyViteAddress" = "复制VITE地址";
 "grin.teach.vite.send.startSend" = "开始转账";
-
+"grin.txMethod.http" = "HTTP地址";
+"grin.txMethod.vite" = "VVITE地址";
+"grin.txMethod.file" = "文件交易";
