--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -185,6 +185,7 @@
 "send.page.toast.amount.empty" = "请填写金额";
 "send.page.toast.amount.zero" = "转账金额不能为0";
 "send.page.toast.note.too.long" = "备注已达上限";
+"send.page.toast.contract.address.support.hex" = "您转账的目标地址是一个合约，备注必须是合法的十六进制字符";
 "send.page.not.enough.balance.alert.title" = "账户余额不足";
 "send.page.not.enough.balance.alert.button" = "取消交易";
 "send.page.confirm.biometryAuthFailed.title" = "无法识别";
