--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -155,7 +155,7 @@
 "balance.info.detail.pledge" = "获取配额";
 "balance.info.detail.exchange.vite" = "置换Vite";
 "balance.info.detail.pledge.count.content" = "配额 %@ UTPS";
-"balance.info.detail.onroad.amount.content" = "%@ 待确认";
+"balance.info.detail.onroad.amount.content" = "%@ 在途";
 
 /* Address Manage Page */
 "address.manage.page.title" = "我的VITE地址";
