--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -550,6 +550,7 @@
 "grin.node.select.canNotConnect" = "未能连接到全节点";
 "grin.detail.slateCopied" = "已复制Slate ID";
 "grin.send.illegalAmmount" = "转账金额不合法";
+"grin.detail.gatewayResend" = "请求网管重发";
 
 
 
