--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -452,6 +452,7 @@
 "grin.notSeeAgain" = "Don't show me again";
 "grin.sent.title" = "GRIN Transfer";
 "grin.sent.amount" = "Amount";
+"grin.receive.ture.amount" = "实收金额";
 "grin.sent.fee" = "Fees";
 "grin.sent.creatFile" = "Generate Transaction File";
 "grin.shareFile.desc" = "Please sign for the transaction";
@@ -544,6 +545,7 @@
 "grin.detail.gatewaysend" = "Vite代转";
 "grin.detail.repoat" = "重新广播";
 "grin.node.configNode" = "配置全节点";
+"grin.node.addNode" = "添加全节点";
 "grin.node.edit.nodeAddressTitle" = "全节点地址";
 "grin.node.edit.apiSecretTitle" = "秘钥";
 "grin.node.select.canNotConnect" = "未能连接到全节点";
