--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -456,6 +456,7 @@
 "grin.notSeeAgain" = "不再提示";
 "grin.sent.title" = "GRIN转账";
 "grin.sent.amount" = "金额";
+"grin.receive.ture.amount" = "实收金额";
 "grin.sent.fee" = "交易费";
 "grin.sent.creatFile" = "生成交易文件";
 "grin.shareFile.desc" = "请签收交易";
@@ -481,7 +482,7 @@
 "grin.thisIsFirstViteAddress" = "这是您的第一个VITE地址。";
 "grin.receiveByHttp.addressCopyed" = "您的GRIN收款HTTP地址已复制至剪贴板";
 "grin.receiveByHttp.desc" = "通过HTTP地址收转GRIN，如上图所示，Vite将为您代收代转，以上两次转账过程均会产生交易费。";
-"grin.receive.title" = "GRIN转账";
+"grin.receive.title" = "GRIN收款";
 "grin.receive.sented" = "已传送";
 "grin.creatTime" = "生成时间";
 "grin.signAndShare" = "签收并分享";
@@ -548,6 +549,7 @@
 "grin.detail.gatewaysend" = "Vite代转";
 "grin.detail.repoat" = "重新广播";
 "grin.node.configNode" = "配置全节点";
+"grin.node.addNode" = "添加全节点";
 "grin.node.edit.nodeAddressTitle" = "全节点地址";
 "grin.node.edit.apiSecretTitle" = "秘钥";
 "grin.node.select.canNotConnect" = "未能连接到全节点";
