--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -546,7 +546,7 @@
 "grin.detail.txisPostingPlsWait" = "交易正在广播中，请等待确认。";
 "grin.detail.waitHerOpenViteWalletToReceive" = "请等待收款人打开Vite钱包接收交易。";
 "grin.detail.pleaseReciveAndShare" = "请签收交易并将交易文件分享给转账人，您可以选择任何您喜欢的转账方式。";
-"grin.detail.gatewaysend" = "Vite代转";
+"grin.detail.gatewaysend" = "VITE交易代转";
 "grin.detail.repoat" = "重新广播";
 "grin.node.configNode" = "配置全节点";
 "grin.node.addNode" = "添加全节点";
